It does not matter how slowly you go as long as you do not stop. -- Confucius

Fri, Feb 6, 2008
---------------------------------------------------------------------
- Finished implementing after_filter callback hook in [web-to-lead] plugin.
- Implemented tasks deletion for all three views.

Thu, Feb 5, 2008
---------------------------------------------------------------------
- More work researching application's after_filter and making it work right.

Wed, Feb 4, 2008
---------------------------------------------------------------------
- Added [app_after_filter] hook and moved the rest of [web-to-lead] code to plugin.
- Started converting CSS to SASS.

Tue, Feb 3, 2008
---------------------------------------------------------------------
- Added README.rdoc and sample database configuration files, updated sample users.
- Added :app_before_filter hook, extracted [web-to-lead] code and moved it to plugin.
- Tweaks to login and signup forms (to be converted to HAML soon).

Mon, Feb 2, 2008
---------------------------------------------------------------------
- Updated task related controller and view specs.
- Extracted sample plugin and moved it into separate Git repository.

Sun, Feb 1, 2008
---------------------------------------------------------------------
- SuperBowl!!
- Refactored tasks controller to offload most of sidebar and filter processing to task model.
- Impletented tasks/complete for pending tasks.

Sat, Jan 31, 2008
---------------------------------------------------------------------
- [Create new task] and [Assign new task] forms now save/restore their display state.
- Implemented task filtering for all three views.
- Added completion checkboxes and created initial implementation.

Fri, Jan 30, 2008
---------------------------------------------------------------------
- Ruby 1.9.1 final was released today!
- Added new named scopes to support assignments and completed tasks.
- Added sidebar filters for completed tasks.