@@ -1,0 +1,47 @@
+html, body {
+  background: #e5e5e5;
+  font-size-adjust: none;
+  font-stretch: normal;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  height: 100%;
+  line-height: normal; }
+
+body, ol, ul, li, dt, tt, label, input, select, textarea {
+  font-size: 12px;
+  font-family: "Lucida Grande", Geneva, Arial, Helvetica, sans-serif; }
+
+body, h1, h2, h3, h4, h5, h6, ol, ul, li {
+  margin: 0px;
+  padding: 0px; }
+
+form {
+  margin: 0px; }
+
+ul li {
+  list-style-type: none; }
+
+a {
+  text-decoration: underline; }
+  a:link {
+    color: navy; }
+  a:hover {
+    background: steelblue;
+    color: white;
+    text-decoration: none; }
+
+a img {
+  background-color: white;
+  border: none;
+  color: white;
+  text-decoration: none; }
+
+small {
+  font-size: 10px; }
+
+dt {
+  font-size: 11px; }
+
+tt {
+  font-size: 12px; }
