@@ -1,0 +1,53 @@
+#header {
+  background: #1e4262;
+  color: skyblue;
+  padding: 8px 16px 8px 16px; }
+  #header h3 a {
+    background: #1e4262;
+    color: greenyellow;
+    font: normal 15px "Lucida Grande", Arial, Helvetica, sans-serif;
+    text-decoration: none; }
+  #header div {
+    float: right;
+    font-size: 11px; }
+  #header div a {
+    color: lightyellow;
+    padding: 1px 4px 1px 4px;
+    text-decoration: none; }
+
+#tabs {
+  background: #1e4262;
+  height: 24px;
+  padding: 0px;
+  text-align: center;
+  width: 100%; }
+  #tabs li {
+    float: left;
+    font-size: 12px;
+    list-style: none;
+    margin: 0px 4px 0px 16px;
+    width: !size_tab_width; }
+  #tabs a:link, #tabs a:visited {
+    background: #466bb1;
+    color: white;
+    float: left;
+    padding: 4px 8px 5px 8px;
+    text-align: center;
+    text-decoration: none;
+    width: !size_tab_width;
+    -moz-border-radius-topleft: 3px;
+    -moz-border-radius-topright: 3px;
+    -webkit-border-top-left-radius: 3px;
+    -webkit-border-top-right-radius: 3px; }
+  #tabs a:hover {
+    background: #97baff;
+    color: navy; }
+  #tabs a:link.active, #tabs a:visited.active {
+    background: azure;
+    color: navy;
+    text-decoration: none; }
+
+#footer {
+  color: grey;
+  font-size: 10px;
+  padding: 0px 0px 0px 16px; }
